# ai-cli

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  README.zh.md  README_ja.md  README_zh.md  ai.py  pyproject.toml  run_build.sh
.github/workflows/: release.yml
_/scripts/: gen_doc.sh
scripts/: gen_doc.sh
src/ai_cli/: __init__.py  chat_presets.py  cli.py  git.py  setting.py
src/ai_cli/bot/: __init__.py  bard.py  bing.py  gemini.py  token.py
